# protoc-gen-vectorizer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  dependencies.html  dependency-convergence.html  dependency-info.html  distribution-management.html  index.html  license.html  plugin-management.html  plugins.html  pom.xml  project-info.html  project-summary.html  team-list.html
cmake/Modules/: FindMaven.cmake
com/github/wush978/protobuf-vectorizer/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/github/wush978/protobuf-vectorizer/0.1.0/: protobuf-vectorizer-0.1.0.jar.md5  protobuf-vectorizer-0.1.0.jar.sha1  protobuf-vectorizer-0.1.0.pom  protobuf-vectorizer-0.1.0.pom.md5  protobuf-vectorizer-0.1.0.pom.sha1
com/github/wush978/protobuf-vectorizer/0.1.1/: protobuf-vectorizer-0.1.1.jar.md5  protobuf-vectorizer-0.1.1.jar.sha1  protobuf-vectorizer-0.1.1.pom.md5  protobuf-vectorizer-0.1.1.pom.sha1
com/github/wush978/protobuf-vectorizer/0.1.2/: protobuf-vectorizer-0.1.2.jar.md5  protobuf-vectorizer-0.1.2.jar.sha1  protobuf-vectorizer-0.1.2.pom  protobuf-vectorizer-0.1.2.pom.md5  protobuf-vectorizer-0.1.2.pom.sha1
include/: CategoricalVectorization.h  FieldVectorization.h  FileVectorization.h  Interaction.h  InteractionIndex.h  MessageFieldVectorization.h  MessageVectorization.h  NumericalVectorization.h  UserVectorization.h  Vectorization.h  VectorizerGenerator.h
src/: CMakeLists.txt  FileVectorization.cpp  InteractionIndex.cpp  MessageVectorization.cpp  VectorizerGenerator.cpp  main.cpp
src/main/java/: Proto.java
src/main/java/com/github/wush978/reference/: Vectorizer.java
src/main/java/com/github/wush978/test/: PersonOuterClass.java  TestPersons.java
src/main/java/com/github/wush978/util/: SecondToHour.java
src/main/java/com/github/wush978/vectorizer/: BaseVectorizer.java  ComparableOptional.java  Interaction.java  Vector.java
src/main/java/io/github/wush978/reference/: Vectorizer.java
src/main/java/io/github/wush978/test/: PersonOuterClass.java
src/main/java/io/github/wush978/vectorizer/: BaseVectorizer.java  Vector.java
src/main/proto/: person.proto  vector.proto
src/main/test/com/github/wush978/reference/: VectorizerTest.java
src/main/test/com/github/wush978/test/: TestUtility.java
src/main/test/io/github/wush978/reference/: VectorizerTest.java
test/: CMakeLists.txt  VectorizerGenerator_test.cpp  VectorizerGenerator_testOpenRTB.cpp  VectorizerGenerator_testPerson.cpp
test/project/: pom.xml
test/project/test-vectorizer/: pom.xml
test/project/test-vectorizer/src/main/proto/: openrtb.proto
test/project/test-vectorizer/src/test/java/com/github/wush978/test/: VectorizerTest.java  VectorizingPersonTest.java
test/project/test-vectorizer/src/test/java/com/google/openrtb/: VectorizingOpenRTBTest.java
test/project/test-vectorizer/src/test/resources/: bidRequest.pb
test/proto/: a.proto  b.proto  person.proto
