set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
find_package(Protobuf REQUIRED)
execute_process(COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} --version OUTPUT_VARIABLE Protobuf_VERSION_RAW OUTPUT_STRIP_TRAILING_WHITESPACE)
string(REPLACE "libprotoc " "" Protobuf_VERSION ${Protobuf_VERSION_RAW})
message(STATUS "The version of Protobuf is ${Protobuf_VERSION}") 
if (Protobuf_VERSION VERSION_LESS "3.0.0")
  message(FATAL_ERROR "Please upgrade your Protobuf to version 3.0.0 at least")
endif()
find_package(Boost REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/../include)
# add_library(ProtocGenVectorizer VectorizerGenerator.cpp FileVectorization.cpp MessageVectorization.cpp InteractionIndex.cpp)
add_executable(ProtocGenVectorizer main.cpp VectorizerGenerator.cpp FileVectorization.cpp MessageVectorization.cpp InteractionIndex.cpp)
target_link_libraries(ProtocGenVectorizer ${PROTOBUF_LIBRARIES} ${PROTOBUF_PROTOC_LIBRARIES})
